staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: withus-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: withus-staging
  template:
    metadata:
      labels:
        app: withus-staging
    spec:
      containers:
        - name: withus
          image: shash042319/withus:latest
          ports:
            - containerPort: 8080
