staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: withus-staging-service
spec:
  selector:
    app: withus-staging
  ports:
    - port: 80
      targetPort: 8080
